@@ -2,7 +2,10 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.24 2004/11/14 23:00:31 port001 Exp $
+# $Id: ChangeLog,v 1.25 2004/11/18 16:40:13 port001 Exp $
+
+18 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * Login fixes (redirect on login/logout)
 
 14 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * offset for the error report list
